fix category bar overflow horizontally

--- a/BookingPage/style3.css
+++ b/BookingPage/style3.css
@@ -14,7 +14,7 @@ body {
 /* Category Bar Section */
 .category-bar {
   position: static;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
